# scintillator-sipm

./: .gitignore  CMakeLists.txt  MCP_QE.csv  analysis.cc  analysis.py  init_vis.mac  pvt-response.csv  run.mac  run1.mac  scintillator-sipm.cc  vis.mac
.ipynb_checkpoints/: CherenkovAnalytical-checkpoint.ipynb
include/: ActionInitialization.hh  CherenkovHit.hh  DetectorConstruction.hh  DetectorConstructionLarge.hh  DetectorConstructionSmall.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
job/: gen_job.py  run_jobs.sh
job/jobs/005um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/010um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/015um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/020um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/025um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/030um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/035um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/040um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/045um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/050um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/055um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/060um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/065um/: xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/070um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/075um/: xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/080um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/085um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/090um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/095um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/jobs/100um/: xray_copper.error  xray_copper.job  xray_copper.out  xray_copper.sh
job/model/: xray_copper.job  xray_copper.sh
root-style/: style.cc  style.hh
src/: ActionInitialization.cc  CherenkovHit.cc  DetectorConstruction.cc  DetectorConstructionLarge.cc  DetectorConstructionSmall.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
